commit file name best practice

--- a/src/app/templates/catalog.component.html
+++ b/src/app/templates/catalog.component.html
@@ -1,3 +1,6 @@
+<!--
+  1. filename best practice.
+-->
 <div class="departments">
   <button (click)="applyFilter('CH')">Charms</button>
   <button (click)="applyFilter('PO')">Potions</button>
