folder file best angular practices

--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,5 +1,6 @@
 <!--
   1. filename best practice.
+  2. folder best practice
 -->
 <div class="departments">
   <button (click)="applyFilter('CH')">Charms</button>
